--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form with Skills</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/style.css">
 </head>
 <body>
 
@@ -44,7 +44,7 @@
 
         <button type="submit">Submit</button>
     </form>
-    <script src="./Form.js">
+    <script src="public/Form.js">
     </script>
 
 </body>
